--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -27,31 +27,14 @@ dd {
 	margin-block-start: 0;
 }
 
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 /* https://piccalil.li/blog/removing-list-styles-without-affecting-semantics/ */
 :is(ul, ol)[class] {
 	list-style-type: '';
+	margin: 0;
 }
 
 ul {
 	list-style-type: circle;
-}
-
-/* Set core body defaults */
-body {
-	min-height: 100vh;
-	line-height: 1.5;
-}
-
-/* Set shorter line heights on headings and interactive elements */
-h1,
-h2,
-h3,
-h4,
-button,
-input,
-label {
-	line-height: 1.1;
 }
 
 /* Balance text wrapping on headings */
@@ -95,4 +78,13 @@ textarea:not([rows]) {
 /* Anything that has been anchored to should have extra scroll margin */
 :target {
 	scroll-margin-block: 5ex;
+}
+
+/* https://css-tricks.com/the-focus-visible-trick/ */
+:focus-visible {
+	outline: 1px solid var(--main);
+	outline-offset: 1px;
+}
+:focus:not(:focus-visible) {
+	outline: none;
 }
