--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -3,13 +3,19 @@
 	--font-stack-serif: 'Iowan Old Style', 'Palatino Linotype', 'URW Palladio L', P052, serif;
 	--font-stack-mono: 'IBM Plex Mono', monospace;
 
+	--scaling-ratio: calc(14 / 16);
+	--monospace-scale: 0.933;
+	--font-size-body: calc(1rem * var(--scaling-ratio));
+	--line-height: calc(1.5 / var(--scaling-ratio));
+
 	--font-size-small: 0.85em;
-	--font-size-body: 1em;
 	--font-size-subhead: calc(3.5em / 3);
 	--font-size-heading: calc(4em / 3);
 	--font-size-title: calc(6em / 3);
 
-	--line-height: calc(1.5 / 0.875); /* 24px for base font size */
-
 	--border-radius-small: 0.15em;
+	--border-radius-medium: 0.25em;
+
+	--transition-snappy: 150ms;
+	--transition-default: 250ms;
 }
