--- a/src/styles/defaults.scss
+++ b/src/styles/defaults.scss
@@ -64,6 +64,7 @@ button {
 	border-radius: var(--border-radius-small);
 	padding: 0.25em 0.5em;
 	margin: 0;
+	white-space: nowrap;
 
 	&:hover {
 		background-color: var(--flood);
