--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -5,7 +5,7 @@
 
 	--scaling-ratio: calc(14 / 16);
 	--monospace-scale: 0.933;
-	--font-size-body: calc(1rem * var(--scaling-ratio));
+	--font-size-body: calc(1em * var(--scaling-ratio));
 	--line-height: calc(1.5 / var(--scaling-ratio));
 
 	--font-size-small: 0.85em;
