--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -54,7 +54,7 @@ a:not([class]) {
 /* Make images easier to work with */
 img,
 picture {
-	max-width: 100%;
+	max-inline-size: 100%;
 	display: block;
 }
 
@@ -72,7 +72,7 @@ select {
 
 /* Make sure textareas without a rows attribute are not tiny */
 textarea:not([rows]) {
-	min-height: 10em;
+	min-block-size: 10em;
 }
 
 /* Anything that has been anchored to should have extra scroll margin */
