--- a/src/styles/defaults.scss
+++ b/src/styles/defaults.scss
@@ -5,7 +5,7 @@ html {
 	min-block-size: 100vh;
 	font-size: 100%;
 	font-family: var(--font-stack-sans);
-	font-weight: 400;
+	font-weight: var(--font-weight-normal);
 	font-variant-ligatures: common-ligatures;
 	font-variant-numeric: tabular-nums;
 	hanging-punctuation: first last;
@@ -23,17 +23,17 @@ body {
 
 h1 {
 	font-size: var(--font-size-title);
-	font-weight: 300;
+	font-weight: var(--font-weight-light);
 	line-height: 1.3;
 }
 h2 {
 	font-size: var(--font-size-heading);
-	font-weight: 300;
+	font-weight: var(--font-weight-light);
 	line-height: 1.4;
 }
 h3 {
 	font-size: var(--font-size-subhead);
-	font-weight: 300;
+	font-weight: var(--font-weight-light);
 	line-height: 1.5;
 }
 h1,
@@ -43,7 +43,7 @@ h3 {
 }
 
 strong {
-	font-weight: 500;
+	font-weight: var(--font-weight-medium);
 }
 
 small,
@@ -179,12 +179,6 @@ pre {
 	overflow-x: auto;
 }
 
-ol,
-ul {
-	margin: 0;
-	padding-inline-start: 1.5em;
-}
-
 blockquote {
 	margin: 0;
 	padding-inline-start: 0.75em;
@@ -229,7 +223,7 @@ td {
 
 th {
 	text-align: start;
-	font-weight: normal;
+	font-weight: var(--font-weight-normal);
 	color: var(--secondary);
 	vertical-align: end;
 	white-space: nowrap;
