--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -13,6 +13,11 @@
 	--font-size-heading: calc(4em / 3);
 	--font-size-title: calc(6em / 3);
 
+	--font-weight-light: 300;
+	--font-weight-normal: 400;
+	--font-weight-medium: 500;
+	--font-weight-bold: 700;
+
 	--border-radius-small: 0.15em;
 	--border-radius-medium: 0.25em;
 
