Use dynamic and logical viewport units for sizing

--- a/src/styles/defaults.scss
+++ b/src/styles/defaults.scss
@@ -1,8 +1,8 @@
 @import './vars.scss';
 
 html {
-	block-size: 100vh;
-	min-block-size: 100vh;
+	block-size: 100dvb;
+	min-block-size: 100dvb;
 	font-size: 100%;
 	font-family: var(--font-stack-sans);
 	font-weight: var(--font-weight-normal);
