--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -5,6 +5,7 @@
 	padding-inline: var(--container-padding-inline);
 	background-color: var(--paper);
 	border: 1px solid var(--divider);
+	border-radius: var(--border-radius-small);
 	overflow: hidden;
 }
 
