--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,12 +1,8 @@
 :root {
 	--font-stack-sans: 'IBM Plex Sans', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
 	--font-stack-serif: 'Iowan Old Style', 'Palatino Linotype', 'URW Palladio L', P052, serif;
-	--font-stack-mono: 'IBM Plex Mono', monospace;
-
-	--scaling-ratio: calc(14 / 16);
-	--monospace-scale: 0.933;
-	--font-size-body: calc(1em * var(--scaling-ratio));
-	--line-height: calc(1.5 / var(--scaling-ratio));
+	--font-stack-mono: 'IBM Plex Mono', Menlo, Consolas, Monaco, Liberation Mono, Lucida Console,
+		monospace;
 
 	--font-size-small: 0.85em;
 	--font-size-subhead: calc(3.5em / 3);
