--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,59 +8,107 @@
 @import './utilities.scss' layer(utilities);
 
 .app {
-	--app-padding: 1em;
-	display: flex;
-	flex-direction: column;
-	block-size: 100%;
+	--padding: 1rem;
+	--sidebar-width: 12rem;
 }
 
 .app-header {
-	flex: 0 0 auto;
+	z-index: 1;
+	font-size: var(--font-size-small);
+	line-height: 1.75em;
+	column-width: 25ch;
+	column-gap: 2em;
+	padding: var(--padding);
 }
 
-.app-container {
-	flex: 1;
-	overflow: hidden;
+.app-nav {
 	display: flex;
+	flex-direction: column;
 }
 
-.app-index {
-	flex: 1 1 0;
-	padding: var(--app-padding);
-	min-inline-size: min(25ch, 100dvi);
-	overflow: auto;
+.nav-link {
+	&::before {
+		content: attr(data-icon);
+		display: inline-block;
+	}
+	&::before,
+	&:hover::before {
+		text-decoration: none;
+		margin-right: 1ch;
+	}
 }
 
-.app-content {
-	flex: 1 1 100%;
-	padding: var(--app-padding);
-	overflow: auto;
+.app:has(.app-main:not(:empty)) {
+	.app-header {
+		column-width: unset;
+		position: fixed;
+	}
+	@media (width >= 600px) {
+		padding-inline-start: calc(var(--sidebar-width) + var(--padding));
+
+		.app-header {
+			width: var(--sidebar-width);
+			padding: 0;
+			top: var(--padding);
+			left: var(--padding);
+			bottom: var(--padding);
+			display: flex;
+			flex-direction: column;
+			gap: 0.75lh;
+
+			& > * {
+				margin-block: 0;
+			}
+
+			.index {
+				flex: 1;
+				overflow: auto;
+				padding-inline-end: var(--padding);
+				margin-inline-end: calc(-1 * var(--padding));
+			}
+		}
+	}
+	@media (width < 600px) {
+		.app-header {
+			--chroma: 100%;
+			--max-width: calc(100% - 2 * var(--padding));
+			bottom: calc(var(--padding) / 2);
+			left: 50%;
+			width: var(--max-width);
+			max-width: var(--max-width);
+			transform: translateX(-50%);
+			overflow: hidden;
+			background-color: var(--float);
+			display: flex;
+			border-radius: var(--border-radius-small);
+			border: 1px solid var(--border);
+			padding: 0.5rem 1rem;
+
+			& > *:not(:is(nav)) {
+				display: none;
+			}
+		}
+		.app-nav {
+			width: 100%;
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			gap: 1em;
+		}
+		.nav-link {
+			text-align: center;
+		}
+	}
+}
+
+.app-main {
+	padding: var(--padding);
 
 	&:empty {
 		display: none;
 	}
-}
 
-@media (max-width: 550px) {
-	.app-container:has(.app-content:not(:empty)) {
-		flex-direction: column;
-
-		.app-index {
-			flex: 0 0 auto;
-			order: 1;
-			border-block-start: 1px solid var(--divider);
-
-			.controls,
-			.index-entry,
-			.section-break {
-				display: none;
-			}
-			.index {
-				display: flex;
-				flex-wrap: wrap;
-				justify-content: center;
-				row-gap: 0.5em;
-			}
-		}
+	@media (width < 600px) {
+		padding-bottom: 4rem;
 	}
 }
