--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -72,7 +72,7 @@
 		.app-header {
 			--chroma: 100%;
 			--max-width: calc(100% - 2 * var(--padding));
-			bottom: calc(var(--padding) / 2);
+			bottom: var(--padding);
 			left: 50%;
 			width: var(--max-width);
 			max-width: var(--max-width);
@@ -92,7 +92,7 @@
 			width: 100%;
 			display: flex;
 			flex-direction: row;
-			justify-content: center;
+			justify-content: space-evenly;
 			gap: 1em;
 		}
 		.nav-link {
@@ -109,6 +109,6 @@
 	}
 
 	@media (width < 600px) {
-		padding-bottom: 4rem;
+		padding-bottom: 6rem;
 	}
 }
