--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -9,7 +9,7 @@
 
 .app {
 	--padding: 1rem;
-	--sidebar-width: 12rem;
+	--sidebar-width: 14rem;
 }
 
 .app-header {
@@ -44,17 +44,17 @@
 		position: fixed;
 	}
 	@media (width >= 600px) {
-		padding-inline-start: calc(var(--sidebar-width) + var(--padding));
+		padding-inline-start: var(--sidebar-width);
 
 		.app-header {
 			width: var(--sidebar-width);
-			padding: 0;
-			top: var(--padding);
-			left: var(--padding);
-			bottom: var(--padding);
+			top: 0;
+			left: 0;
+			bottom: 0;
 			display: flex;
 			flex-direction: column;
 			gap: 0.75lh;
+			border-inline-end: 1px solid var(--divider);
 
 			& > * {
 				margin-block: 0;
@@ -63,6 +63,7 @@
 			.index {
 				flex: 1;
 				overflow: auto;
+				overscroll-behavior: contain;
 				padding-inline-end: var(--padding);
 				margin-inline-end: calc(-1 * var(--padding));
 			}
