--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -12,6 +12,11 @@
 .inherit {
 	all: inherit;
 	color: currentColor;
+
+	&:hover {
+		text-decoration: revert;
+		cursor: revert;
+	}
 }
 
 .text-inverted {
