--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -34,7 +34,7 @@
 	&::before,
 	&:hover::before {
 		text-decoration: none;
-		margin-right: 1ch;
+		margin-inline-end: 1ch;
 	}
 }
 
@@ -48,9 +48,9 @@
 
 		.app-header {
 			width: var(--sidebar-width);
-			top: 0;
-			left: 0;
-			bottom: 0;
+			inset-block-start: 0;
+			inset-block-end: 0;
+			inset-inline-start: 0;
 			display: flex;
 			flex-direction: column;
 			gap: 0.75lh;
@@ -73,11 +73,11 @@
 		.app-header {
 			--chroma: 100%;
 			--max-width: calc(100% - 2 * var(--padding));
-			bottom: var(--padding);
-			left: 50%;
+			inset-block-end: var(--padding);
+			inset-inline-start: 50%;
+			transform: translateX(-50%);
 			width: var(--max-width);
 			max-width: var(--max-width);
-			transform: translateX(-50%);
 			overflow: hidden;
 			background-color: var(--float);
 			display: flex;
@@ -106,6 +106,51 @@
 	padding: var(--padding);
 
 	@media (width < 600px) {
-		padding-bottom: 6rem;
+		padding-block-end: 6rem;
+	}
+}
+
+.app-trail {
+	position: fixed;
+	inset-block-start: 0;
+	inset-block-end: 0;
+	inset-inline-end: 0;
+	max-width: 50%;
+	height: 100dvh;
+	overflow: auto;
+	z-index: 10;
+	background-color: var(--background);
+	display: flex;
+	flex-direction: row-reverse;
+	overscroll-behavior: contain;
+
+	.segments {
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+		flex: 1 0 auto;
+
+		> li {
+			display: contents;
+		}
+	}
+
+	.separator,
+	.segment {
+		flex: 0 0 100%;
+	}
+
+	.segment {
+		background-color: var(--background);
+		padding: var(--padding);
+	}
+
+	.separator {
+		border-inline-end: 1px solid var(--edge);
+		position: sticky;
+		inset-inline-start: 1px;
+		margin-inline-start: 1px;
+		width: 1px;
+		z-index: 100;
 	}
 }
