Changes to layout, event handling, and citation display

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -3,6 +3,13 @@
 	--container-padding-block: 1em;
 }
 
+.ssm {
+	display: none;
+}
+.show-super-secret-menus .ssm-container:hover .ssm {
+	display: initial;
+}
+
 .card {
 	padding-block: var(--container-padding-block);
 	padding-inline: var(--container-padding-inline);
