--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -14,9 +14,12 @@
 	--font-weight-medium: 500;
 	--font-weight-bold: 700;
 
-	--border-radius-small: 0.2em;
-	--border-radius-medium: 0.4em;
+	--border-radius-small: 0.15rem;
+	--border-radius-medium: 0.25rem;
 
 	--transition-snappy: 150ms;
 	--transition-default: 250ms;
+
+	--container-padding-inline: 0.875rem;
+	--container-padding-block: 0.625rem;
 }
