--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -46,6 +46,26 @@
 	}
 }
 
+.block-link {
+	position: relative;
+	&::before {
+		content: '';
+		position: absolute;
+		inset: 0;
+		background-color: transparent;
+		transition: background-color 150ms;
+	}
+	&:hover {
+		cursor: pointer;
+		&::before {
+			background-color: var(--splash);
+		}
+	}
+	& > * {
+		position: relative;
+	}
+}
+
 .extract {
 	--layout-gap: 0.5em;
 	border: 1px solid var(--divider);
@@ -53,28 +73,6 @@
 	background-color: var(--paper);
 	overflow: hidden;
 	position: relative;
-
-	&.block-link {
-		&::before {
-			content: '';
-			position: absolute;
-			inset: 0;
-			background-color: transparent;
-			transition: background-color 150ms;
-		}
-
-		&:hover::before {
-			background-color: var(--splash);
-		}
-
-		& > * {
-			position: relative;
-		}
-	}
-
-	&.block-link:hover {
-		cursor: pointer;
-	}
 
 	&.extract--default {
 		border: none;
