--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -150,7 +150,7 @@
 
 	.separator,
 	.segment {
-		flex: 0 0 100%;
+		flex: 0 1 100%;
 	}
 
 	.segment {
@@ -161,8 +161,7 @@
 	.separator {
 		border-inline-end: 1px solid var(--edge);
 		position: sticky;
-		inset-inline-start: 1px;
-		margin-inline-start: 1px;
+		inset-inline-start: 0;
 		width: 1px;
 		z-index: 100;
 	}
